--- a/static/css/tables.css
+++ b/static/css/tables.css
@@ -46,6 +46,10 @@ td.dropdown-cell {
   overflow: visible;
 }
 
+.dropdown-cell .dropdown {
+  position: static !important;
+}
+
 thead {
   border-bottom: none;
 }
